# cpp-tools

./: .gitignore  CMakeLists.txt  FFmpegToolBox.cpp  FFmpegToolBox.h  README.md  ffmpegTool.cpp  ffmpegTool.h  gitpush.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multithread.h  mytools.cpp  mytools.h  plugs.h  test1.mkv  test2.mkv  translate.py  ui_mainwindow.h  vcpkg.json
include/cppjieba/: DictTrie.cpp  HMMSegment.cpp  Jieba.cpp  KeywordExtractor.cpp  MPSegment.cpp  PosTagger.cpp  Trie.cpp
jieba/include/cppjieba/: HMMModel.cpp  SegmentBase.cpp  SegmentTagged.cpp
jieba/include/limonp/: StringUtil.cpp
jieba/include/limonp/test/gtest/: CMakeLists.txt
jieba/test/: demo.cpp
jieba/test/unittest/: CMakeLists.txt
lib/: CVTools.cpp  CVTools.h  FFmpegTool.cpp  FFmpegTool.h  FileOrganizer.cpp  FileOrganizer.h  HeadFile.h  InputSimulator.cpp  InputSimulator.h  MyTools.cpp  MyTools.h  multithread.h  plugs.h  redispool.h  threadpools.h  tools.cpp  tools.h
lib/database/: Database.h  MySQLDatabase.cpp  MySQLDatabase.h  RedisTools.cpp  RedisTools.h
lib/jieba/include/cppjieba/: FullSegment.cpp  MixSegment.cpp  PreFilter.cpp  QuerySegment.cpp  Unicode.cpp
lib/jieba/include/limonp/test/: CMakeLists.txt
lib/jieba/include/limonp/test/unittest/: CMakeLists.txt
lib/pools/: mysqlpool.h  pools.h  redispool.h  threadpools.h
lib/tools/: FileOrganizer.cpp  FileOrganizer.h  MySQLTool.cpp  MySQLTool.h  python.cpp  python.h  tools.cpp  tools.h
lib/暂时不用/: RedisTool.cpp  RedisTool.h  redis.cpp  redis.h  test.cpp
shells/: install_packets.sh
test/: CMakeLists.txt  demo.cpp
v/: input.txt  output.txt
